--- a/src/css/style.css
+++ b/src/css/style.css
@@ -116,7 +116,7 @@ THE SOFTWARE.
     background: white;
     padding-left: 5px;
 }
-.response-div {
+.response-div-style {
     border-left: solid 3px #C0EbF1;
     padding-left: 20px;
     white-space: pre-wrap;
