--- a/src/css/style.css
+++ b/src/css/style.css
@@ -139,54 +139,58 @@ THE SOFTWARE.
  * Taken from http://rahul-sagore.github.io/#/blog/vertical-tabs-with-material-design-lite
  * Has been modified to not use mdl grid
 */
-/*
-.vertical-mdl-tabs {
-  padding: 30px 0;
-    display: table;
-}
-.vertical-mdl-tabs-bar {
-    display: table-cell;
-}
-.vertical-mdl-tabs-panels {
-    display: table-cell;
-    width: 100%;
-}
+@media screen and (max-width: 800px) {
+    .vertical-mdl-tabs {
+        /*padding: 30px 0;*/
+        display: table;
+    }
+    .vertical-mdl-tabs-bar {
+        display: table-cell;
+        padding-top: 10px;
+    }
+    .vertical-mdl-tabs-panels {
+        display: table-cell;
+        width: 100%;
+        vertical-align: top;
+    }
 
-.vertical-mdl-tabs .mdl-tabs__tab-bar {
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    height: inherit;
-    border-bottom: none;
-    border-right: 1px solid rgba(10, 11, 49, 0.20);
-}
+    .vertical-mdl-tabs .mdl-tabs__tab-bar {
+        -webkit-flex-direction: column;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        height: inherit;
+        border-bottom: none;
+        border-right: 1px solid rgba(10, 11, 49, 0.20);
+    }
 
-.vertical-mdl-tabs .mdl-tabs__tab {
-    width: 100%;
-    height: 35px;
-    line-height: 35px;
-    box-sizing: border-box;
-    letter-spacing: 2px;
-}
+    .vertical-mdl-tabs .mdl-tabs__tab {
+        width: 100%;
+        height: 35px;
+        line-height: 35px;
+        box-sizing: border-box;
+        letter-spacing: 2px;
+    }
 
-.vertical-mdl-tabs.mdl-tabs.is-upgraded a.mdl-tabs__tab.is-active {
-    border-right: 2px solid #ED462F;
-    color: #ED462F;
-}
-.vertical-mdl-tabs.mdl-tabs.is-upgraded .mdl-tabs__tab.is-active:after {
-    content: inherit;
-    height: 0;
-}
+    .vertical-mdl-tabs.mdl-tabs.is-upgraded a.mdl-tabs__tab.is-active {
+        border-right: 2px solid #ED462F;
+        color: #ED462F;
+    }
+    .vertical-mdl-tabs.mdl-tabs.is-upgraded .mdl-tabs__tab.is-active:after {
+        content: inherit;
+        height: 0;
+    }
 
-.vertical-mdl-tabs.mdl-tabs .mdl-tabs__tab {
-    text-align: left;
-}
+    .vertical-mdl-tabs.mdl-tabs .mdl-tabs__tab {
+        text-align: left;
+    }
 
-/* I will handle padding manually
-.vertical-mdl-tabs.mdl-tabs.is-upgraded .mdl-tabs__panel.is-active, .mdl-tabs__panel {
-    padding: 0 30px;
+    /* I will handle padding manually
+    .vertical-mdl-tabs.mdl-tabs.is-upgraded .mdl-tabs__panel.is-active, .mdl-tabs__panel {
+        padding: 0 30px;
+    }
+    */
+
 }
-*/
 
 .alert-box {
     color:#555;
