Added differentiated grayed out background for the event log tabel

--- a/src/Public/css/style.css
+++ b/src/Public/css/style.css
@@ -243,3 +243,7 @@ THE SOFTWARE.
     padding: 0px 35px 0px 0px;
     vertical-align: top;
 }
+
+.gray-background {
+    background-color: rgba(0, 0, 0, 0.05);
+}
